--- a/webapp/templates/base.html
+++ b/webapp/templates/base.html
@@ -11,6 +11,7 @@
     <title>Hello, world!</title>
 </head>
 <body>
+    {% include 'menu.html' %}
     <div class="container">
         <h1>{{ page_title }}</h1>
         {% block content %}
